--- a/itch.io/Profile.css
+++ b/itch.io/Profile.css
@@ -1,1 +1,71 @@
-#wrapper{--l:var(--itchio_link_color);--b:var(--itchio_bg_color);--btn:var(--itchio_button_color);--btn_f:var(--itchio_button_fg_color);}.custom-lb{background:var(--btn);color:var(--btn_f);text-decoration:none;padding:.2ch 1ch;margin:.15em;font-weight:700;border-radius:4px;line-height:1em;display:inline-block}.custom-lb>img{height:1em;vertical-align:bottom}small.custom-lb{font-size:.6em}a.custom-lb{color:var(--btn_f)}.custom-grouped-lb{white-space:nowrap}.custom-grouped-lb>.custom-lb{border-radius:0;margin:0}.custom-grouped-lb>.custom-lb:first-child{border-radius:12px 0 0 12px}.custom-grouped-lb>.custom-lb:last-child{border-radius:0 12px 12px 0}.custom-grouped-lb>.custom-lb:not(:last-child){margin-right:.1em}a.custom-link-ext{padding-right:1.25em}a.custom-link-ext::after{position:absolute;display:inline-block;content:".";width:1em;margin-top:.2em;margin-left:.25em;background:currentColor;mask-size:1em;-webkit-mask-size:1em;mask-repeat:no-repeat;-webkit-mask-repeat:no-repeat;--ext-i:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3C!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--%3E%3Cpath d='M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6l0-128c0-17.7-14.3-32-32-32L352 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z'/%3E%3C/svg%3E");mask-image:var(--ext-i);-webkit-mask-image:var(--ext-i)}.carousel_wrapper{--l:linear-gradient(90deg, #fff calc(100% - var(--collection-fade-length, 30%)), #0000);-webkit-mask-image:var(--l);mask:alpha var(--l)}
+#wrapper {
+    --l:var(--itchio_link_color);
+    --b:var(--itchio_bg_color);
+    --btn:var(--itchio_button_color);
+    --btn_f:var(--itchio_button_fg_color);
+}
+.custom-lb {
+    background:var(--btn);
+    color:var(--btn_f);
+    text-decoration:none;
+    padding:.2ch 1ch;
+    margin:.15em;
+    font-weight:700;
+    border-radius:4px;
+    line-height:1em;
+    display:inline-block
+}
+.custom-lb>img {
+    height:1em;
+    vertical-align:bottom
+}
+small.custom-lb {
+    font-size:.6em
+}
+a.custom-lb {
+    color:var(--btn_f)
+}
+.custom-grouped-lb {
+    white-space:nowrap
+}
+.custom-grouped-lb>.custom-lb {
+    border-radius:0;
+    margin:0
+}
+.custom-grouped-lb>.custom-lb:first-child {
+    border-radius:12px 0 0 12px
+}
+.custom-grouped-lb>.custom-lb:last-child {
+    border-radius:0 12px 12px 0
+}
+.custom-grouped-lb>.custom-lb:not(:last-child) {
+    margin-right:.1em
+}
+a.custom-link-ext {
+    padding-right:1.25em
+}
+a.custom-link-ext::after {
+    position:absolute;
+    display:inline-block;
+    content:".";
+    width:1em;
+    margin-top:.2em;
+    margin-left:.25em;
+    background:currentColor;
+    mask-size:1em;
+    -webkit-mask-size:1em;
+    mask-repeat:no-repeat;
+    -webkit-mask-repeat:no-repeat;
+    --ext-i:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3C!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--%3E%3Cpath d='M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6l0-128c0-17.7-14.3-32-32-32L352 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z'/%3E%3C/svg%3E");
+    mask-image:var(--ext-i);
+    -webkit-mask-image:var(--ext-i)
+}
+.carousel_wrapper {
+    --l:linear-gradient(90deg, #fff calc(100% - var(--collection-fade-length, 30%)), #0000);
+    -webkit-mask-image:var(--l);
+    mask:alpha var(--l)
+}
+
+.user_links {
+    display: none;
+}
